--- a/index.html
+++ b/index.html
@@ -155,10 +155,7 @@
                             </div>
                         </div>
                         <nav role="navigation" class="nav-menu w-nav-menu">
-                            <a href="/works" class="nav-link w-inline-block">
-                                <div>Portifolio</div>
-                            </a>
-                            <a href="/contact" class="nav-link w-inline-block">
+                            <a href="https://wa.me/+919769144628?text=Hello%2C%20can%20I%20get%20more%20info%20on%20SMM%3F" class="nav-link w-inline-block">
                                 <div>Contact</div>
                             </a>
                         </nav>
